--- a/deadline-calendar/index.html
+++ b/deadline-calendar/index.html
@@ -12,7 +12,7 @@
         <div class="input">
             <label for="inputDeadline" hidden>Выбери дату</label>
             <input id="inputDeadline" type="date">
-            <button id="exportCalendar" type="button" class="export-btn hide">сохранить pdf</button>
+            <!--<button id="exportCalendar" type="button" class="export-btn hide">сохранить pdf</button>-->
         </div>
     </header>
 
